[gd_scene load_steps=2 format=2]

[ext_resource path="res://MusicPlayer.gd" type="Script" id=2]

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="AudioPlayers" type="Node" parent="."]

[node name="BG_Track" type="AudioStreamPlayer" parent="AudioPlayers"]
process_priority = -1
volume_db = -10.0
bus = "Music"
